--- a/sample_config.env
+++ b/sample_config.env
@@ -1,4 +1,4 @@
 DB_URL="postgres://username:password@ip/dbname" # PostgreSQL Database
 COUNTRY="SA" # https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
-CITY="Jeddah"
+CITY="Makkah"
 WELCOME_MSG="شكرًا لإضافتي الى المجموعة.\nرح ارسل أذكار كل ساعتين"
